--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@ body {
 nav {
   position: fixed;
   width: 100%;
-	height: 50px;
 	background-color: #393939;
   opacity: 0.9;
   overflow: hidden;
@@ -29,47 +28,52 @@ nav {
 @media screen and (min-width: 750px) {
   nav {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto;
     grid-template-areas:
-  		"logo home events music";
-      height: 70px;
+  		"links logo social";
   }
+}
+#links {
+  grid-area: links;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+  display: none;
+}
+#logo {
+  grid-area: logo;
+  justify-content: center;
+  display: none;
 }
 .logo {
-  grid-area: logo;
-  max-height: 50px;
+  max-height: 2em;
 }
-@media screen and (min-width: 750px) {
-  .logo {
-    position: static;
-    max-height: 70px;
-  }
-}
-.imbeingstupid {
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  top: 0;
-  display: block;
-}
-@media screen and (min-width: 750px) {
-  .imbeingstupid {
-    position: static;
-  }
+#social {
+  grid-area: social;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+  display: none;
 }
 nav a {
   font-family: 'Dancing Script';
 	text-decoration: none;
 	font-size: 1.5em;
 	color: whitesmoke;
-  float: right;
-  padding: 14px 16px;
-  display: none;
 }
 @media screen and (min-width: 750px) {
   nav a {
     font-size: 2.5em;
-    display: block;
+  }
+  #links, #logo, #social {
+    display: flex;
+  }
+  #links a {
+    padding: 20px;
+  }
+  #social a {
+    font-size: 2em;
+    padding-top: 30px;
   }
 }
 .link:hover {
@@ -80,17 +84,11 @@ nav a {
 .active {
   color: #aaa;
 }
-.home {
-  grid-area: home;
-}
-.eventspage {
-  grid-area: events;
-}
-.music {
-  grid-area: music;
-}
 .icon {
   display: block;
+  text-align: right;
+  font-size: 2.5em;
+  padding-right: 20px;
 }
 @media screen and (min-width: 750px) {
   .icon {
@@ -100,14 +98,22 @@ nav a {
 .topNav.responsive {
   height: 100%;
 }
+.topNav.responsive #links, .topNav.responsive #logo, .topNav.responsive #social {
+  display: flex;
+}
+.topNav.responsive #links {
+  flex-direction: column;
+  text-align: center;
+}
+.topNav.responsive #logo {
+  padding: 40px;
+}
 .topNav.responsive a {
-  display: block;
   float: none;
-  text-align: right;
   font-size: 2.5em;
 }
-.topNav.responsive a.icon {
-  font-size: 1.5em;
+.topNav.responsive #social a {
+  font-size: 2em;
 }
 
 header {
@@ -117,12 +123,6 @@ header {
   background-size: cover;
   background-attachment: fixed;
   background-color: whitesmoke;
-  margin-top: 50px;
-}
-@media screen and (min-width: 750px) {
-  header {
-      margin-top: 70px;
-  }
 }
 header video {
     right: 0;
@@ -134,13 +134,6 @@ header video {
   header video {
       display: block;
   }
-}
-.words {
-  position: absolute;
-  top: 80px;
-  left: 20%;
-  right: 20%;
-  width: 60%;
 }
 .non_index_img {
   position: static;
