--- a/css/main.css
+++ b/css/main.css
@@ -43,10 +43,15 @@ nav {
 #logo {
   grid-area: logo;
   justify-content: center;
-  display: none;
+  align-items: stretch;
+  display: flex;
 }
 .logo {
-  max-height: 2em;
+  max-height: 1.5em;
+  font-size: 1.25em;
+}
+.logoWrap {
+  width: 50%;
 }
 #social {
   grid-area: social;
@@ -70,6 +75,7 @@ nav a {
   }
   #links a {
     padding: 20px;
+    padding-top: 20px;
   }
   #social a {
     font-size: 2em;
@@ -89,6 +95,7 @@ nav a {
   text-align: right;
   font-size: 2.5em;
   padding-right: 20px;
+  width: 50%;
 }
 @media screen and (min-width: 750px) {
   .icon {
@@ -98,15 +105,15 @@ nav a {
 .topNav.responsive {
   height: 100%;
 }
-.topNav.responsive #links, .topNav.responsive #logo, .topNav.responsive #social {
+.topNav.responsive #links, .topNav.responsive #social {
   display: flex;
 }
 .topNav.responsive #links {
   flex-direction: column;
   text-align: center;
 }
-.topNav.responsive #logo {
-  padding: 40px;
+.topNav.responsive #links a {
+  padding: 20px;
 }
 .topNav.responsive a {
   float: none;
@@ -114,6 +121,10 @@ nav a {
 }
 .topNav.responsive #social a {
   font-size: 2em;
+}
+.topNav.responsive #logo .logoWrap {
+  max-height: 2em;
+  font-size: 1.5em;
 }
 
 header {
@@ -135,18 +146,34 @@ header video {
       display: block;
   }
 }
+.words {
+  position: absolute;
+  top: 40vh;
+  left: 20%;
+  right: 20%;
+  width: 60%;
+}
 .non_index_img {
   position: static;
   width: 100%;
 }
-.index_img {
+#homeImage {
   position: static;
   width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: url("../photos/homePage.jpg");
   margin-bottom: 20px;
 }
 @media screen and (min-width: 750px) {
-  .index_img {
+  #homeImage {
       display: none;
+  }
+  .words {
+    display: none;
   }
 }
 main {
