--- a/css/main.css
+++ b/css/main.css
@@ -200,11 +200,14 @@ main {
 }
 @media screen and (min-width: 1200px) {
   main {
-    grid-template-columns: 3fr 1fr 8fr 1fr 3fr;
+    grid-template-columns: 2fr 1fr 8fr 1fr 2fr;
     grid-template-areas:
       ". . info . ."
       "section section section section section"
       ". . video . .";
+  }
+  .main {
+    grid-template-columns: 3fr 1fr 8fr 1fr 3fr;
   }
 }
 .info {
@@ -285,7 +288,7 @@ footer {
 	display: flex;
   text-align: center;
   align-items: stretch;
-  justify-content: center;
+  justify-content: space-evenly;
   align-content: center;
   font-size: 1em;
 }
@@ -381,7 +384,6 @@ footer section {
 }
 .footerImg img {
   max-width: 100%;
-  margin: 20px;
   box-shadow: 0 16px 32px 0 rgba(0,0,0,0.8);
   display: none;
 }
