--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ header {
 header video {
     right: 0;
     bottom: 0;
-    max-width: 100%;
+    width: 100%;
     display: none;
 }
 @media screen and (min-width: 750px) {
@@ -224,7 +224,7 @@ main {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 40px;
+  margin-top: 60px;
 }
 .info div a, .info div iframe {
   box-shadow: 0 16px 32px 0 rgba(0,0,0,0.8);
