--- a/css/main.css
+++ b/css/main.css
@@ -281,6 +281,7 @@ main {
 @media screen and (min-width: 750px) {
   .spotify {
     flex-direction: row;
+    padding-top: 60px;
   }
   .video {
     padding-top: 60px;
