--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ header h1 {
 }
 .non_index_img {
   position: static;
-  max-height: 100vh;
+  width: 100%;
 }
 #homeImage {
   position: static;
