--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,23 @@ header h1 {
 .non_index_img {
   position: static;
   width: 100%;
+  max-height: 100vh;
+}
+#bio_img {
+  width: 100%;
+  height: 80vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../photos/BioPage2.jpeg");
+}
+#music_img {
+  width: 100%;
+  height: 80vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../photos/MusicPage2.jpeg");
 }
 #homeImage {
   position: static;
