--- a/css/main.css
+++ b/css/main.css
@@ -228,15 +228,13 @@ main {
   }
 }
 .info {
-  grid-area: info;
+  /* grid-area: info; */
   text-align: center;
-  /* padding-top: 40px; */
-  display: flex;
-  flex-direction: column;
   font-family: 'Adamina';
 }
 .info div {
   display: flex;
+  flex-direction: column;
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -261,10 +259,6 @@ main {
     flex-wrap: nowrap;
   }
 }
-.info h1 {
-  font-size: 2em;
-  font-family: 'Dancing Script';
-  }
 .section {
   grid-area: section;
   background-image: url("../photos/Seth_Charleston_Music_Drawing.jpg");
@@ -455,4 +449,12 @@ footer section {
   border-width: medium;
   margin-bottom: 50px;
   box-shadow: 0 16px 32px 0 rgba(0,0,0,0.8);
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+@media screen and (min-width: 1200px) {
+  .events {
+    grid-column-start: 2;
+    grid-column-end: 5;
+  }
 }
