--- a/css/main.css
+++ b/css/main.css
@@ -170,19 +170,27 @@ header h1 {
 }
 #bio_img {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("../photos/BioPage2.jpeg");
+  background-image: url("../photos/BioPage.png");
 }
 #music_img {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("../photos/MusicPage2.jpeg");
+  background-image: url("../photos/MusicPage.png");
+}
+#events_img {
+  width: 100%;
+  height: 90vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../photos/EventsPage.png");
 }
 #homeImage {
   position: static;
