--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,16 @@ nav a {
   max-height: 2em;
   font-size: 1.5em;
 }
-
+#aboveHeader {
+  background-color: #393939;
+  width: 100%;
+  height: 54px;
+}
+@media screen and (min-width: 750px) {
+  #aboveHeader {
+      height: 88px;
+  }
+}
 header {
   grid-area: header;
   background-position: center;
