--- a/css/main.css
+++ b/css/main.css
@@ -466,7 +466,7 @@ footer section {
 }
 .album iframe {
   width: 100%;
-  height: 300px;
+  /* height: 300px; */
   box-shadow: 0 16px 32px 0 rgba(0,0,0,0.8);
 }
 .events {
