--- a/css/main.css
+++ b/css/main.css
@@ -470,12 +470,13 @@ footer section {
   box-shadow: 0 16px 32px 0 rgba(0,0,0,0.8);
 }
 .events {
-  border-style: solid;
+  /* border-style: solid; */
   border-width: 1px;
   margin-bottom: 50px;
   box-shadow: 0 16px 32px 0 rgba(0,0,0,0.8);
   grid-column-start: 2;
   grid-column-end: 3;
+  border-radius: 12px;
 }
 @media screen and (min-width: 1200px) {
   .events {
