--- a/css/main.css
+++ b/css/main.css
@@ -477,6 +477,7 @@ footer section {
   grid-column-start: 2;
   grid-column-end: 3;
   border-radius: 12px;
+  background-color: #c4b4b454;
 }
 @media screen and (min-width: 1200px) {
   .events {
