--- a/css/main.css
+++ b/css/main.css
@@ -167,7 +167,7 @@ header h1 {
 }
 .words {
   position: absolute;
-  top: 40vh;
+  top: 10vh;
   left: 20%;
   right: 20%;
   width: 60%;
@@ -178,37 +178,37 @@ header h1 {
   max-height: 100vh;
 }
 #bio_img {
-  width: 100%;
+  /* width: 100%;
   height: 90vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("../photos/BioPage.png");
+  background-image: url("../photos/BioPage.png"); */
 }
 #music_img {
-  width: 100%;
+  /* width: 100%;
   height: 90vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("../photos/MusicPage.png");
+  background-image: url("../photos/MusicPage.png"); */
 }
 #events_img {
-  width: 100%;
+  /* width: 100%;
   height: 90vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("../photos/EventsPage.png");
+  background-image: url("../photos/EventsPage.png"); */
 }
 #homeImage {
   position: static;
-  width: 100%;
-  height: 100vh;
+  /*width: 100%;
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("../photos/Homepage2.jpeg");
+  background-image: url("../photos/Homepage2.jpeg"); */
   margin-bottom: 20px;
   display: flex;
 }
