--- a/css/main.css
+++ b/css/main.css
@@ -329,15 +329,15 @@ main {
 }
 footer {
 	width: 100%;
-  padding-top: 2em;
+	padding-top: 2em;
 	background-color: #393939;
 	color: whitesmoke;
 	display: flex;
-  text-align: center;
-  align-items: stretch;
-  justify-content: space-evenly;
-  align-content: center;
-  font-size: 1em;
+	text-align: center;
+	align-items: stretch;
+	justify-content: space-evenly;
+	align-content: center;
+	font-size: 1em;
 }
 
 footer section {
@@ -351,11 +351,11 @@ footer section {
 .title {
 	text-align: center;
 	font-size: 3em;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: space-around;
-  justify-content: space-around;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	align-content: space-around;
+	justify-content: space-around;
 }
 
 #mc_embed_signup {
@@ -363,9 +363,10 @@ footer section {
 	padding: 0px 5%;
 }
 #imbeingrealstupid {
+  white-space: nowrap;
   text-align: center;
   font-family: 'Dancing Script';
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-size: 0.75em;
 }
 .mc-field-group {
@@ -383,10 +384,12 @@ footer section {
 	border-radius: 5px;
 	border: none;
 }
+#mc-embedded-sub {
+  /* height: 0px; */
+}
 
 #mc-embedded-subscribe {
 	width: 120px;
-	margin: 10px;
 	height: 30px;
   font-family: 'Adamina';
 	background-color: whitesmoke;
@@ -397,9 +400,14 @@ footer section {
 #mc-embedded-subscribe:hover {
   opacity: 0.4;
 }
+
+.clear {
+  height: 0px;
+}
+
 .social {
   text-align: center;
-
+  font-size: 0.75em;
 }
 .social .fa {
 	color: #B6B6B6;
@@ -417,6 +425,7 @@ footer section {
   font-family: 'Adamina';
   text-decoration: none;
   font-size: 0.4em;
+  white-space: nowrap;
   margin: 20px;
 }
 .footer a {
