--- a/css/main.css
+++ b/css/main.css
@@ -458,11 +458,28 @@ footer {
   grid-column-start: 2;
   grid-column-end: 3;
   border-radius: 12px;
-  background-color: #c4b4b454;
+  background-color: whitesmoke;
 }
 @media screen and (min-width: 1200px) {
   .events {
     grid-column-start: 2;
     grid-column-end: 5;
   }
+}
+.ticket-button {
+  cursor: pointer;
+  transition: transform 0.3s, box-shadow 0.3s;
+  background-color: #393939;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 20px;
+  margin: 10px;
+}
+.ticket-button a {
+  color: whitesmoke;
+  text-decoration: none;
+}
+.ticket-button:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
